tests/baselines/reference/emitClassDeclarationWithExtensionAndTypeArgumentInES6.errors.txt
tests/cases/conformance/es6/classDeclaration/emitClassDeclarationWithExtensionAndTypeArgumentInES6.ts(8,9): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'B<T>'.


==== tests/cases/conformance/es6/classDeclaration/emitClassDeclarationWithExtensionAndTypeArgumentInES6.ts (1 errors) ====
    class B<T> {
        constructor(a: T) { }
    }
    class C extends B<string> { }
    class D extends B<number> {
        constructor(a: any)
        constructor(b: number) {
            super(b);
            ~~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'B<T>'.
        }
    }